# CI-benchmarks

./: .gitignore  DIAGNOSTICS.md  README.md  RESULTS.md  ROOT_CAUSE.md  analyze.py  analyze_adversary.py  plot.py  plot_diag.py  plot_rootcause.py  plot_stress.py  pyproject.toml  stress_test.py  torch-config-Darwin-py3.14.txt
.github/workflows/: bench.yml  diagnostics.yml
archive/: IO_VARIANCE.md  LOCAL_RESULTS.md  README.md  io.yml  io_sweep.py  local_sweep.py  plot.py  plot_io.py  plot_sweep.py  test_io_bench.py
tests/: test_suite2p_step.py  test_thread_bench.py  test_torch_diag.py
